crates/id_effect/tests/ui/tilde_key_outside_effect.rs
#[::id_effect::capability(u32)]
struct Database;

fn main() {
  let _ = id_effect::require!(DatabaseKey);
}
